--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "react-router": "^7.1.1",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
